--- a/k8s-manifests/wisecow-deployment.yaml
+++ b/k8s-manifests/wisecow-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: wisecow-deployment
 spec:
-  replicas: 2   # run 2 pods for HA
+  replicas: 2
   selector:
     matchLabels:
       app: wisecow
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wisecow
-        image: wisecow-app:latest  # change if pushing to Docker Hub
+        image: vishalsingh81/wisecow:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 4499
-
