--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,41 +1,47 @@
-name: CI/CD Pipeline
+name: CI/CD for Wisecow
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]   # or your branch
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    # 1. Checkout repo
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+    # 2. Log in to Docker Hub
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # 3. Build & Push Docker image
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
 
-      - name: Build Docker image
-        run: |
-          docker build -t vishalsingh81/wisecow:latest .
+    # 4. Setup kubectl & deploy to cluster
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: v1.34.0
 
-      - name: Push Docker image
-        run: |
-          docker push vishalsingh81/wisecow:latest
+    - name: Configure Kubeconfig
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > ~/.kube/config
 
-      # Optional: Deploy to Kubernetes if you have cluster access
-      # - name: Set up kubectl
-      #   uses: azure/setup-kubectl@v3
-      #   with:
-      #     version: 'latest'
-      #
-      # - name: Apply manifests
-      #   run: |
-      #     kubectl apply -f k8s-manifests/
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl apply -f k8s-manifests/
+        kubectl rollout status deployment/wisecow-deployment
 
