--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,47 +1,37 @@
-name: CI/CD for Wisecow
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]   # or your branch
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout repo
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # 1. Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # 2. Log in to Docker Hub
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # 2. Set up Docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    # 3. Build & Push Docker image
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
+      # 3. Log in to Docker Hub using repository secrets
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # 4. Setup kubectl & deploy to cluster
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: v1.34.0
+      # 4. Build the Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t vishalsingh81/wisecow:latest .
 
-    - name: Configure Kubeconfig
-      run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > ~/.kube/config
-
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f k8s-manifests/
-        kubectl rollout status deployment/wisecow-deployment
+      # 5. Push the Docker image to Docker Hub
+      - name: Push Docker image
+        run: |
+          docker push vishalsingh81/wisecow:latest
 
