--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3. Log in to Docker Hub using repository secrets
+      # 3. Log in to Docker Hub using repository secrets now it should work
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
